--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="./src/favicon.ico" />
 	<link rel="icon" type="image/png+xml" href="./src/favicon-32x32.png">
 	<link rel="apple-touch-icon" href="./src/favicon-32x32.png">
-    <title>Transcend</title>
+	<title>BlackPong</title>
   </head>
   <body>
     <div id="app"></div>
